--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,8 +71,13 @@
       @apply border-border;
     }
     body {
-      @apply bg-background text-foreground;
-    }
+      background: linear-gradient(to bottom,#ffffff, #4f46e5);
+      background-attachment: fixed;
+    }   
+    .dark body {
+      background: linear-gradient(to bottom, #4f46e5, #000);
+      background-attachment: fixed;
+}
   }
 
   h3 code {
