--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,16 +4,18 @@
 
 @layer base {
     :root {
-
+      /*background colors for the cards */
       --card: 0 0% 100%; 
       --card-foreground: 210 11.1% 3.53%;
 
       --popover: 0 0% 100%;
       --popover-foreground: 210 11.1% 3.53%;
-
+      
+      /*background colors for the skills */
       --primary: 0 0% 9%;
       --primary-foreground: 0 0% 98%;
 
+      /*background colors for the languages used on the project cards */
       --secondary: 0 0% 96.1%;
       --secondary-foreground: 0 0% 9%;
 
