--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,12 +15,12 @@
       --primary: 0 0% 9%;
       --primary-foreground: 0 0% 98%;
 
-      /*background colors for the languages used on the project cards */
+      /*background colors for the text used on the project cards */
       --secondary: 0 0% 96.1%;
       --secondary-foreground: 0 0% 9%;
 
       /*Text colors */
-      --muted: 0 0% 96.1%;
+      --muted: 0 0% 100%;
       --muted-foreground: 0 0% 0%;
 
       --accent: 0 0% 96.1%;
