mobile sizing issue fixed
todo: fix headerspacing for mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,9 @@
     * {
       @apply border-border;
     }
+    html, body {
+      overflow-x: clip;
+    }
     body {
       background: linear-gradient(to bottom,#ffffff, #4f46e5);
       background-attachment: fixed;
